# Coscientist

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTERNAL_MCPS.md  MCP_SERVERS.md  README.md  RESEARCHER.md  ROADMAP.md  SECURITY.md  SETUP.md  SKILLS.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: advocate.md  architect.md  assumption-auditor.md  cartographer.md  chronicler.md  compositor.md  cross-project-memory.md  curator.md  dataset-curator.md  debate-con.md  debate-judge.md  debate-pro.md  diarist.md  diviner.md  drafter.md  evolver.md  experimentalist.md  funder.md  gaper.md  grant-writer.md  grounder.md  historian.md  idea-attacker.md  idea-tree-generator.md  indexer.md  inquisitor.md  librarian.md  panel.md  (+40 more)
docs/: .mcp.json.example  CONSENSUS-SKILLS-ANALYSIS.md  DESKTOP-VALIDATION.md  DOGFOOD-RUN-86926630.md  EXPEDITION-LIVE-VALIDATION-79fa3b38.md  IDEA-TREE-USAGE.md  MCP-SETUP.md  QUALITY-AUDIT-a933c2db.md  RESEARCH-MODES-PLAN.md  RESEARCHER-CROSS-REF.md  SESSION-DIGEST-v0.118-v0.138.md  SESSION-DIGEST-v0.97-v0.117.md  SKILL-MD-DRIFT-REPORT.md  SMOKE-TEST-RUNBOOK.md  SOURCE-SELECTOR-RUBRIC.md  architecture.md  research-loop.md
lib/: __init__.py  agent_quality.py  artifact.py  audit_retention.py  auto_tournament.py  brief_renderer.py  cache.py  calibration.py  changelog.py  citation_resolver.py  concept_velocity.py  contribution_mapper.py  cost_dashboard.py  db_check.py  db_notify.py  debate.py  disagreement.py  era_detection.py  gap_analyzer.py  gate_trace.py  graph.py  graph_advanced.py  graph_viz.py  health.py  hook_check.py  idea_tree.py  install_check.py  lockfile.py  mcp_index.py  migrations.py  mode_selector.py  openalex_client.py  paper_artifact.py  persona_doc_check.py  persona_input.py  persona_schema.py  phase_groups.py  plugin_checksums.py  plugin_cleanup.py  project.py  (+21 more)
plugin/coscientist-graph-query-mcp/: .mcp.json  CHECKSUMS.txt  README.md  pyproject.toml
plugin/coscientist-graph-query-mcp/.claude-plugin/: plugin.json
plugin/coscientist-graph-query-mcp/lib/: cache.py  graph.py  migrations.py  project.py  sqlite_schema.sql
plugin/coscientist-graph-query-mcp/lib/migrations_sql/: v10.sql  v12.sql  v13.sql  v15.sql
plugin/coscientist-graph-query-mcp/server/: server.py
plugin/coscientist-manuscript-mcp/: .mcp.json  CHECKSUMS.txt  pyproject.toml
plugin/coscientist-manuscript-mcp/.claude-plugin/: plugin.json
plugin/coscientist-manuscript-mcp/server/: server.py
plugin/coscientist-retraction-mcp/: .mcp.json  CHECKSUMS.txt  pyproject.toml
plugin/coscientist-retraction-mcp/.claude-plugin/: plugin.json
plugin/coscientist-retraction-mcp/server/: server.py
scripts/: backup_cache.sh  ci-status.sh  install_all.sh  install_hooks.sh  pre-commit  restore_cache.sh  test-like-ci.sh
tests/: _shim.py  _tmp_dogfood_input.json  _tmp_input.json  harness.py  run_all.py  test_a5_trio.py  test_agent_frontmatter.py  test_agents.py  test_arxiv_to_markdown.py  test_audit_query.py  test_audit_rotate.py  test_bibtex_import.py  test_brief_renderer.py  test_cache_leak_detector.py  test_calibration.py  test_changelog.py  test_citation_alerts.py  test_citation_collisions.py  test_citation_format_converter.py  test_citation_resolver.py  test_citation_validation.py  test_concept_velocity.py  test_connect_wal.py  test_credit_tracker.py  test_dataset_agent.py  test_db_state_machine.py  test_debate.py  test_deep_research_pipeline.py  test_disagreement.py  test_era_detection.py  test_evolve_loop.py  test_expedition_dry_run.py  test_experiment_design.py  test_experiment_reproduce.py  test_field_trends.py  test_figure_agent.py  test_gates.py  test_grant_draft.py  test_graph_query.py  test_graph_query_mcp.py  (+174 more)
(+274 files in other folders)
