[project]
name = "coscientist-graph-query-mcp"
version = "0.1.0"
description = "Read-only stdio MCP over Coscientist's per-project citation graph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "epireve", email = "i@firdaus.my" }]
keywords = ["graph", "citation-graph", "kuzu", "sqlite", "research", "mcp", "read-only"]
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/epireve/coscientist"
Source = "https://github.com/epireve/coscientist/tree/main/plugin/coscientist-graph-query-mcp"

[project.scripts]
coscientist-graph-query-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "lib"]
