[project]
name = "coscientist-manuscript-mcp"
version = "0.1.0"
description = "Stdio MCP server: .docx / .tex / .md → structured AST"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "epireve", email = "i@firdaus.my" }]
keywords = ["manuscript", "ast", "citations", "latex", "markdown", "docx", "mcp"]
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/epireve/coscientist"
Source = "https://github.com/epireve/coscientist/tree/main/plugin/coscientist-manuscript-mcp"

[project.scripts]
coscientist-manuscript-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
