[project]
name = "coscientist-retraction-mcp"
version = "0.1.0"
description = "Stdio MCP server for retraction status (Crossref + PubPeer)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "epireve", email = "i@firdaus.my" }]
keywords = [
    "retraction", "retraction-watch", "pubpeer", "crossref",
    "mcp", "research-integrity",
]
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/epireve/coscientist"
Source = "https://github.com/epireve/coscientist/tree/main/plugin/coscientist-retraction-mcp"

[project.scripts]
coscientist-retraction-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
